# CSG

./: .gitignore  Block.cpp  Block.hpp  CMakeLists.txt  CSGTree.cpp  CSGTree.hpp  Interval.cpp  Interval.hpp  Node.hpp  NodeConcepts.hpp  OpNode.cpp  OpNode.hpp  Operation.hpp  README.md  Scale.cpp  Scale.hpp  Solid.hpp  SolidNode.cpp  SolidNode.hpp  Sphere.cpp  Sphere.hpp  State.hpp  TransNode.cpp  TransNode.hpp  Transformation copy.hpp  Transformation.hpp  Translation.hpp  Union.cpp  Union.hpp  Vertex.cpp  Vertex.hpp  VertexList.cpp  VertexList.hpp  World.cpp  World.hpp  main.cpp  matrix.hpp
interface/: GraphicsSceneWidget.cpp  GraphicsSceneWidget.hpp  GraphicsViewWidget.cpp  GraphicsViewWidget.hpp  InputWidget.cpp  InputWidget.hpp  MainWidget.cpp  MainWidget.hpp  definitions.hpp
nodes/: Node.hpp  OpNode.cpp  OpNode.hpp  SolidNode.cpp  SolidNode.hpp  TransNode.cpp  TransNode.hpp  World.cpp  World.hpp
operations/: Intersection.cpp  Intersection.hpp  Operation.hpp  Union.cpp  Union.hpp
solids/: Block.cpp  Block.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Solid.hpp  Sphere.cpp  Sphere.hpp
tracer/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  DiscreteSurface.hpp  Eye.cpp  Eye.hpp  GLObject.hpp  GLProgram.cpp  GLProgram.hpp  GLView.cpp  GLView.hpp  Light.hpp  Material.hpp  PointLight.cpp  PointLight.hpp  Ray.cpp  Ray.hpp  Sampler.hpp
tracer/shaders/: frag_shader.frag  vert_shader.vert
transformations/: Rotation.cpp  Rotation.hpp  Scale.cpp  Scale.hpp  Transformation.hpp  Translation.cpp
